--- a/HTTPServer/HttpServerLib/HttpServerLib.csproj
+++ b/HTTPServer/HttpServerLib/HttpServerLib.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{C2310E13-8D59-4632-BF91-203BFF2FFE4F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HttpServerLib</RootNamespace>
+    <RootNamespace>HTTPServerLib</RootNamespace>
     <AssemblyName>HttpServerLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -43,8 +43,13 @@
     <Compile Include="HttpRequest.cs" />
     <Compile Include="HttpResponse.cs" />
     <Compile Include="HttpServer.cs" />
+    <Compile Include="HttpService.cs" />
+    <Compile Include="ILogger.cs" />
     <Compile Include="IServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Protocols.cs" />
+    <Compile Include="RouteMapAttribute.cs" />
+    <Compile Include="RouteMethod.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
