Update - Support HTTPService/Service Route

--- a/HTTPServer/HttpServerLib/HttpServerLib.csproj
+++ b/HTTPServer/HttpServerLib/HttpServerLib.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionResult.cs" />
     <Compile Include="BaseHeader.cs" />
     <Compile Include="HttpRequest.cs" />
     <Compile Include="HttpResponse.cs" />
@@ -48,8 +49,13 @@
     <Compile Include="IServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocols.cs" />
-    <Compile Include="RouteMapAttribute.cs" />
+    <Compile Include="RouteAttribute.cs" />
     <Compile Include="RouteMethod.cs" />
+    <Compile Include="ServiceModule.cs" />
+    <Compile Include="ServiceRoute.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
