--- a/HTTPServer/HTTPServer/HttpServer.csproj
+++ b/HTTPServer/HTTPServer/HttpServer.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HttpServerLib\HttpServerLib.csproj">
