Extend Methods For HttpResponse

--- a/HTTPServer/HttpServerLib/HttpServerLib.csproj
+++ b/HTTPServer/HttpServerLib/HttpServerLib.csproj
@@ -49,13 +49,11 @@
     <Compile Include="IServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocols.cs" />
+    <Compile Include="ResponseHelper.cs" />
     <Compile Include="RouteAttribute.cs" />
     <Compile Include="RouteMethod.cs" />
     <Compile Include="ServiceModule.cs" />
     <Compile Include="ServiceRoute.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
