--- a/HTTPServer/HttpServerLib/HttpServerLib.csproj
+++ b/HTTPServer/HttpServerLib/HttpServerLib.csproj
@@ -41,7 +41,7 @@
   <ItemGroup>
     <Compile Include="ActionResult.cs" />
     <Compile Include="BaseHeader.cs" />
-    <Compile Include="HeaderFields.cs" />
+    <Compile Include="RequestHeaderFields.cs" />
     <Compile Include="HttpRequest.cs" />
     <Compile Include="HttpResponse.cs" />
     <Compile Include="HttpServer.cs" />
@@ -50,6 +50,7 @@
     <Compile Include="IServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocols.cs" />
+    <Compile Include="ResponseHeaderFields.cs" />
     <Compile Include="ResponseHelper.cs" />
     <Compile Include="RouteAttribute.cs" />
     <Compile Include="RouteMethod.cs" />
