--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ notifications:
     on_failure: always # default: always
 
 install:
-  - nuget restore solution-name.sln
+  - nuget restore ./HTTPServer/HTTPServer.sln
   - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 
 script:
   - cd ./HTTPServer/
-  - xbuild /p:Configuration=Release solution-name.sln
+  - xbuild /p:Configuration=Release HTTPServer.sln
   - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./HTTPServerLib.UnitTest/bin/Release/HTTPServerLib.UnitTest.dll
 
