--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,7 @@ install:
 
 script:
   - cd ./HTTPServer
-  - xbuild /p:Configuration=Release HTTPServer.sln
-  - xbuild /p:Configuration=Release ./HTTPClient/HttpClient.csproj
-  - xbuild /p:Configuration=Release ./HTTPServer/HttpServer.csproj
-  - xbuild /p:Configuration=Release ./HTTPServerLib/HttpServerLib.csproj
-  - xbuild /p:Configuration=Release ./HTTPServerLib.UnitTest/HttpServerLib.UnitTest.csproj
+  - msbuild /p:Configuration=Release HTTPServer.sln
   - mono ./testrunner/NUnit.Runners.3.8.0/tools/nunit-console.exe ./HTTPServerLib.UnitTest/bin/Release/HTTPServerLib.UnitTest.dll
 
 branches:
