--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,12 @@ notifications:
 
 install:
   - nuget restore ./HTTPServer/HTTPServer.sln
-  - nuget install NUnit.Runners -Version 3.8.0 -OutputDirectory ./TestRunner
+  - nuget install-package NUnit.Runners -Version 3.8.0
 
 script:
   - cd ./HTTPServer
   - msbuild /p:Configuration=Release HTTPServer.sln
-  - ls ./TestRunner
-  - mono ./TestRunner/NUnit.Runners.3.8.0/tools/nunit-console.exe ./HTTPServerLib.UnitTest/bin/Release/HTTPServerLib.UnitTest.dll
+  - mono ./packages/NUnit.Runners.3.8.0/tools/nunit3-console.exe ./HTTPServerLib.UnitTest/bin/Release/HTTPServerLib.UnitTest.dll
 
 branches:
   only:
