--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ notifications:
 install:
   - nuget restore ./HTTPServer/HTTPServer.sln # restore nuget
   - nuget install NUnit.Runners -Version 3.8.0 -OutputDirectory ./TestRunner # install nunit
+  - ls ./TestRunner
 
 script:
   - cd ./HTTPServer
