--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
 script:
   - msbuild /p:Configuration=Release HTTPServer.sln
   - mono ./TestRunner/NUnit.ConsoleRunner.3.8.0/tools/nunit3-console.exe ./HTTPServerLib.UnitTest/bin/Release/HttpServerLib.UnitTest.dll
-  - sonar-scanner
+  - sonar-scanner -Dsonar.verbose=true -X
 
 branches:
   only:
